--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -1,7 +1,7 @@
 html,
-body {
-  height: 100%;
-}
+  body {
+        height: 100%;
+        }
 
 body {
   display: -ms-flexbox;
@@ -10,7 +10,9 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  color: #000;
+  background: #fff;
+
 }
 
 .form-signin {
@@ -42,3 +44,19 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
