--- a/templates/home.html
+++ b/templates/home.html
@@ -6,45 +6,7 @@
   <link href="{{url_for('static',filename='css/bootstrap.min.css')}}" rel="stylesheet" type="text/css" >
   <link rel="shortcut icon" type="text/css" href="{{url_for('static',filename='msuiitlogo.png')}}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style type="text/css">
-    * {
-  box-sizing: border-box;
-}
-
-/* Style the search field */
-form.example input[type=text] {
-  padding: 10px;
-  font-size: 17px;
-  border: 1px solid grey;
-  float: left;
-  width: 80%;
-  background: #f1f1f1;
-}
-
-/* Style the submit button */
-form.example button {
-  float: left;
-  width: 20%;
-  padding: 10px;
-  background: #2196F3;
-  color: white;
-  font-size: 17px;
-  border: 1px solid grey;
-  border-left: none; /* Prevent double borders */
-  cursor: pointer;
-}
-
-form.example button:hover {
-  background: #0b7dda;
-}
-
-/* Clear floats */
-form.example::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-  </style>
+  <link href="{{url_for('static',filename='css/home.css')}}" rel="stylesheet" type="text/css" >
 </head>
 
 <body>
@@ -150,37 +112,37 @@ form.example::after {
             <div class="form-group">
               <label>First Name:</label>
                <input type="hidden"  name="idno" value="{{student.0}}">
-              <input type="text" class="form-control" name="firstName" value="{{student.1}}">
+              <input type="text" class="form-control" name="firstName" value="{{student.1}}" required="1">
             </div>
 
             <div class="form-group">
               <label>Last Name:</label>
-              <input type="text" class="form-control" name="lastName" value="{{student.2}}">
+              <input type="text" class="form-control" name="lastName" value="{{student.2}}" required="1">
             </div>
 
             <div class="form-group">
               <label>Age:</label>
-              <input type="text" class="form-control" name="age" value="{{student.3}}">
+              <input type="text" class="form-control" name="age" value="{{student.3}}" required="1">
             </div>
 
             <div class="form-group">
               <label>Gender:</label>
-              <input type="text" class="form-control" name="gender" value="{{student.4}}">
+              <input type="text" class="form-control" name="gender" value="{{student.4}}" required="1">
             </div>
 
             <div class="form-group">
               <label>Phone Number:</label>
-              <input type="text" class="form-control" name="phoneNumber" value="{{student.5}}">
+              <input type="text" class="form-control" name="phoneNumber" value="{{student.5}}" required="1">
             </div>
 
             <div class="form-group">
               <label>Course:</label>
-              <input type="text" class="form-control" name="course" value="{{student.6}}">
+              <input type="text" class="form-control" name="course" value="{{student.6}}" required="1">
             </div>
 
             <div class="form-group">
               <label>Year Level:</label>
-              <input type="text" class="form-control" name="yearLevel" value="{{student.7}}">
+              <input type="number" class="form-control" name="yearLevel" value="{{student.7}}" required="1" min="1" max="7">
             </div>
 
             <div class="form-group">
@@ -248,7 +210,7 @@ form.example::after {
 
             <div class="form-group">
               <label>Year Level:</label>
-              <input type="text" class="form-control" name="yearLevel" required="1">
+              <input type="number" class="form-control" name="yearLevel" required="1" min="1" max="7">
             </div>
 
             <div class="form-group">
