Your branch is up to date with 'origin/master'.

--- a/templates/home.html
+++ b/templates/home.html
@@ -86,7 +86,7 @@
               <!--for actions--> 
               <td>
                 <a  href="/update/{{student.0}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{student.0}}">Update</a>
-                <a  href="/delete/{{student.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sur you want to delete?')">Delete</a>
+                <a  href="/delete/{{student.0}}" class="btn btn-danger btn-xs" onclick="return confirm('Are you sure you want to delete?')">Delete</a>
               </td>
             </tr>
 
